# azuregpt

./: .env  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_pythonapp101.yml  main_scholarapp.yml  main_scholarapp104.yml
src/: main.py
src/config/: settings.py
src/models/: chat_models.py
src/routes/: azure_search_controller.py  global_controller.py  image_generator_controller.py
src/utils/: azure_util.py  chat_util.py  langchain_util.py
